neo/manifests/neo/templates/neo-cluster.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-cluster
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-cluster
  template:
    metadata:
      labels:
        app: neo-cluster
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-cluster
          image: gcr.io/traefiklabs/neo-cluster:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://admin:admin@mongodb.mongo.svc.cluster.local:27017/clusters?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: neo-cluster
  namespace: neo
  labels:
    app: neo-cluster
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-cluster
    - port: 40000
      targetPort: 40000
      name: neo-cluster-debug
  selector:
    app: neo-cluster

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-agent-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/link`) || Path(`/agent/config`))
      services:
        - name: neo-cluster
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-agent
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/link`) || Path(`/agent/config`))
      services:
        - name: neo-cluster
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-external-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/cluster/external`)
      services:
        - name: neo-cluster
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cluster-external
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/cluster/external`)
      services:
        - name: neo-cluster
          port: 80
      middlewares:
        - name: stripprefix
